5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1637_2443.log
== TEST (2019-04-10 15:37:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

r = float(input("Raio do tanque: "))
h = float(input("Altura do tanque: "))

sn = input("1 indica o volume de ar, 2 indica o volume de combustivel: ")

volAR = ((pi * (h ** 2)) * (3 * r - h)) / 3
volCOMB = ((4 * pi * (r ** 3)) / 3) - ((pi * (h ** 2)) * (3 * r - h)) / 3

if (sn == "1"):
	mensagem = volAR
if (sn == "2"):
	mensagem = volCOMB
	
print(round(mensagem, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 15:38:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

r = float(input("Raio do tanque: "))
h = float(input("Altura do tanque: "))

sn = input("1 indica o volume de ar, 2 indica o volume de combustivel: ")

volAR = ((pi * (h ** 2)) * (3 * r - h)) / 3
volCOMB = ((4 * pi * (r ** 3)) / 3) - ((pi * (h ** 2)) * (3 * r - h)) / 3

if (sn == "1"):
	mensagem = volAR
if (sn == "2"):
	mensagem = volCOMB
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.208471
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:03:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

r = float(input("Raio do tanque: "))
h = float(input("Altura do tanque: "))

sn = input("1 indica o volume de ar, 2 indica o volume de combustivel: ")
volAR = ((pi * (h ** 2)) * )
-- EXECUTION TIME:
0.208869
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 10
    volAR = ((pi * (h ** 2)) * )
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:07:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

r = float(input("Raio do tanque: "))
h = float(input("Altura do tanque: "))

sn = input("1 indica o volume de ar, 2 indica o volume de combustivel: ")
volAR = ((pi * (h ** 2)) * )
volCOMB = ((4 * pi * (r ** 3)) / 3) - ((pi * (h ** 2)) * (3 * r - h)) /3

if(sn == "1"):
	mensagem = volAR
if(sn == "2"):
	mensagem = volCOMB
	
print(round(mensagem, 4))
-- ERROR:
File "XXXX", line 10
    volAR = ((pi * (h ** 2)) * )
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:07:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

r = float(input("Raio do tanque: "))
h = float(input("Altura do tanque: "))

sn = input("1 indica o volume de ar, 2 indica o volume de combustivel: ")
volAR = ((pi * (h ** 2)) * (3 * r - h)) / 3
volCOMB = ((4 * pi * (r ** 3)) / 3) - ((pi * (h ** 2)) * (3 * r - h)) /3

if(sn == "1"):
	mensagem = volAR
if(sn == "2"):
	mensagem = volCOMB
	
print(round(mensagem, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:08:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *

r = float(input("Raio do tanque: "))
h = float(input("Altura do tanque: "))

sn = input("1 indica o volume de ar, 2 indica o volume de combustivel: ")
volAR = ((pi * (h ** 2)) * (3 * r - h)) / 3
volCOMB = ((4 * pi * (r ** 3)) / 3) - ((pi * (h ** 2)) * (3 * r - h)) /3

if(sn == "1"):
	mensagem = volAR
if(sn == "2"):
	mensagem = volCOMB
	
print(round(mensagem, 4))
-- EXECUTION TIME:
0.134895
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
